--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/delete-form.js": "/js/delete-form.js"
+    "/js/delete-form.js": "/js/delete-form.js",
+    "/js/front.js": "/js/front.js",
+    "/js/imag-preview.js": "/js/imag-preview.js"
 }
