--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.22.0",
+        "vue-braintree": "^2.1.0",
         "vue-router": "^3.5.3"
     }
 }
