--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.22.0",
+        "chart.js": "^3.7.1",
         "vue-router": "^3.5.3"
     }
 }
